[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Ashok Menon <ashokmenon@fb.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[dependencies]
scan_fmt = "~0.1.3"
