[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Ashok Menon <ashokmenon@fb.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"

[[bin]]
name = "day05"
path = "src/day05/main.rs"

[[bin]]
name = "day06"
path = "src/day06/main.rs"

[dependencies]
scan_fmt = "~0.1.3"
